Avoid GetHelpText() call which can be quite heavy

GetHelpText() can cause a quite heavy sequence of file and directory
lookups. See fdo#33088. As its return value here was just passed on to
ShowHelpStatusText() which doesn't do anything at all, it was
completely unnecessary. The GetHelpText() calls here caused the
noticeable slowdown in highlighting menu items on Windows with lots of
localised help files for some bundled extensions.

(cherry picked from commit 6fc21aa74b4d2aba07d854d5d3c2f404905b40ef)

Signed-off-by: Caolan McNamara <caolanm@redhat.com>
Signed-off-by: Michael Meeks <michael.meeks@novell.com>
Signed-off-by: Thorsten Behrens <thb@documentfoundation.org>
Signed-off-by: fstrba@novell.com