vcl/source/window/menu.cxx
@@ -1119,9 +1119,6 @@ void Menu::Highlight()
         if ( pStartMenu && ( pStartMenu != this ) )
             pStartMenu->aHighlightHdl.Call( this );
     }
-
-    if ( !aDelData.isDeleted() && GetCurItemId() )
-        GetpApp()->ShowHelpStatusText( GetHelpText( GetCurItemId() ) );
 }
 
 void Menu::ImplSelect()
